# EchoOpenGL

./: .gitignore  CMakeLists.txt  README.md  ResourcePath.mm  Shader.hpp  main.cpp
Echo First GLFW APP.xcodeproj/: project.pbxproj
Echo First GLFW APP.xcodeproj/project.xcworkspace/xcuserdata/zhangjie.xcuserdatad/: UserInterfaceState.xcuserstate
Echo First GLFW APP.xcodeproj/xcshareddata/xcschemes/: Echo First GLFW APP.xcscheme
Echo First GLFW APP.xcodeproj/xcuserdata/zhangjie.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Echo First GLFW APP.xcodeproj/xcuserdata/zhangjie.xcuserdatad/xcschemes/: xcschememanagement.plist
EchoOpenGL.xcodeproj/: project.pbxproj
Resources/echo_shaders/: textures.frag  textures.vs
echo_shaders/: echo_shader.frag  echo_shader.vs
src/: Shader.cpp  Shader.hpp  Vertices.h  main.cpp
